--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ body{
   padding: 50px;
   display: flex;
   justify-content: center;
-  background-color: #8bc9b2;
+  background-color: #6aa891;
   color:rgba(51, 51, 51,0.9);
   font-size: 15px;
   line-height:28px;
@@ -74,7 +74,7 @@ h4{
 a{
   color: white;
   opacity:0.8;
-  text-decoration: none;
+  text-decoration: none!important;
 }
 hr{
   border: none;
@@ -90,12 +90,12 @@ hr{
   padding: 50px;
   position: relative;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 60px auto;
 }
 .left{
   flex: 5;
   border-right:solid 1px #fca4a4;
-  background-color: #8bc9b2
+  background-color: #6aa891
 }
 .right{
   flex: 6;
@@ -324,7 +324,7 @@ hr{
   outline: none;
 }
 .potfoliohref:hover{
-  filter: brightness(85%); 
+  filter: brightness(95%); 
 }
 .scratch{
   letter-spacing: 2.7px;
@@ -872,9 +872,47 @@ hr{
 .scene:active .person1 .hairs{
     transform:translateY(-50px)
 }
+
+.chinese{
+  background-color: #fc7676;
+  border: solid 3px #ffffff; 
+  border-radius: .25rem;
+  color: #222;
+  width: 65px;
+  top: 15px;
+  position: absolute;
+  left: 1010px; 
+  z-index: 999; 
+  text-align: center; 
+  text-decoration: none!important;      
+}
+.chinese:hover{
+  background-color: #ffe0e0;
+}
+.japan{
+  background-color: #ffffff;
+  border: solid 3px #fc7676;
+  color: #222; 
+  border-radius: .25rem;
+  width: 65px;  
+  top: 15px;
+  position: absolute;
+  left: 1090px; 
+  z-index: 999;
+  text-align: center;
+  text-decoration: none!important; 
+  transition: 0.2s;
+}
+.japan:hover{
+    background-color: #fdbfbf;
+}
     </style>
 </head>
 <body>
+  <div class="buttons">
+    <a class="chinese" href="index.html">中文</a>
+    <a class="japan" href="japaneseversion.html">日本語</a>
+  </div>
   <div class="allstars">
     <div class="star1"></div>
     <div class="star2"></div>
@@ -999,7 +1037,7 @@ hr{
             <li>
               JavaScript
               <div class="bar">
-                <div class="value p65"></div>
+                <div class="value p40"></div>
               </div>
             </li>
             <li>
