--- a/index.html
+++ b/index.html
@@ -872,16 +872,15 @@ hr{
 .scene:active .person1 .hairs{
     transform:translateY(-50px)
 }
-
 .chinese{
   background-color: #fc7676;
   border: solid 3px #ffffff; 
   border-radius: .25rem;
   color: #222;
+  top:15px;
+  right:280px;
   width: 65px;
-  top: 15px;
-  position: absolute;
-  left: 1010px; 
+  position: absolute; 
   z-index: 999; 
   text-align: center; 
   text-decoration: none!important;      
@@ -893,11 +892,11 @@ hr{
   background-color: #ffffff;
   border: solid 3px #fc7676;
   color: #222; 
-  border-radius: .25rem;
-  width: 65px;  
   top: 15px;
+  right:205px;
+  border-radius: .25rem;
+  width: 65px;
   position: absolute;
-  left: 1090px; 
   z-index: 999;
   text-align: center;
   text-decoration: none!important; 
