--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -162,7 +162,7 @@
             background: linear-gradient(150deg, #fca4a4, #ffd3d3);
             position: absolute;
             right: -60px;
-            bottom: 100px;
+            bottom: 80px;
         }
 
         .profile {
@@ -402,7 +402,7 @@
             width: 65px;
             top: 15px;
             position: absolute;
-            left: 1010px; 
+            right: 280px; 
             z-index: 999; 
             text-align: center; 
             text-decoration: none!important;  
@@ -419,7 +419,7 @@
             width: 65px;  
             top: 15px;
             position: absolute;
-            left: 1090px; 
+            right: 205px; 
             z-index: 999;
             text-align: center;
             text-decoration: none!important; 
