--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -585,7 +585,7 @@
                     </li>
                     <li class="year">平成30
                         <ul>
-                            <li>天王星株式会社<br>(Panasonic台湾の広告企画会社)</li>
+                            <li>Panasonic台湾の広告企画会社</li>
                             <li>WEB開発エンジニア 実習生</li>
                             <li>上司に輔佐で、プロジェクトを守る<br>と管理する。</li>
                         </ul>
