--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -537,6 +537,7 @@
                 </li>
                 <li class="website">Website
                     <ul>
+                        <li><a class="potfoliohref" href="http://pmst.panasonic.com.tw/Air/PSPCindex.aspx">Panasonic台湾の広告企画会社</a></li>
                         <li><a class="potfoliohref" href="http://catweb.hellokarla.nctu.me/?" target="_blank">猫商品のシャピンWEB</a></li>
                         <li><a class="potfoliohref" href="http://foodblog.hellokarla.nctu.me/?" target="_blank">美食ブログ</a></li>
                         <li><a class="potfoliohref" href="http://resume.hellokarla.nctu.me/" target="_blank">友達履歷</a></li>
