--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@ hr{
           </li>
           <li class="website">Website  
             <ul>
-              <li><a class="potfoliohref" href="http://pmst.panasonic.com.tw/Air/PSPCindex.aspx"></a>Panasonic商品網站</li>
+              <li><a class="potfoliohref" href="http://pmst.panasonic.com.tw/Air/PSPCindex.aspx" target="_blank">Panasonic商品網站</a></li>
               <li><a class="potfoliohref" href="http://catweb.hellokarla.nctu.me/?" target="_blank">購物網站(以貓咪為商品)</a></li>
               <li><a class="potfoliohref" href="http://foodblog.hellokarla.nctu.me/?" target="_blank">美食部落格(Bootstrap)</a></li>
               <li><a class="potfoliohref" href="http://resume.hellokarla.nctu.me/" target="_blank">聯合履歷</a></li>
