--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -467,11 +467,11 @@
                 <h2>自己紹介</h2>
                 <ul>
                     <li style="font-size: 16px;font-weight:200;opacity: 0.8">
-                        こんにちは。チンイシェンと申します。今年２２歳なりました。出身は台北です。
-                        淡江大学で法律を勉強して、今年六月に卒業します。<br><br>
+                        こんにちは。チンイシェンと申します。２２歳なりました。出身は台北です。
+                        大学で法律を勉強して、今年六月に淡江大学で卒業しました。<br>
+                        今年ウーキング．ホリデのビザを取りました、日本へ行くことの期限は来年6月11日まで。<br><br>
                         大学に最後の半年から、プログラミングを自分で勉強します。
-                        私にとって、WEBのプログラミングはとでも面白い。
-                        綺麗なホームページをHtml,Cssて作るたり、可愛いいアニメをjavascriptて作る。<br><br>
+                        HtmlとCssで綺麗なホームページを作るたり、javascriptで可愛いいアニメを作るから、私にとって、WEBプログラミングはとでも面白い。<br><br>
                         私は責任感が強く、何をやる時も真剣にやります。
                         自分の仕事は、必ず自分で、締め切りの前に完成する意識をずっと持つようにしています。<br>
                         生活の中で、他人を尊敬し、周りの方々と睦まじく付き合うことができます。<br><br>
