--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -598,13 +598,13 @@
                     <li>一年計画
                         <ul>
                             <li>1.日本語能力試験 N４→ N２</li>
-                            <li>2.React.jsを使い分ける</li>
+                            <li>2.Front-endのプログラミングを使い分ける</li>
                         </ul>
                     </li>
                     <li>三年計画
                         <ul>
                             <li>1.日本語能力試験 N２→ N１</li>
-                            <li>2.プラジェットを独立して上げる</li>
+                            <li>2.プラジェットを自分でできる</li>
                         </ul>
                     </li>
                 </ul>
