--- a/index.html
+++ b/index.html
@@ -1022,13 +1022,13 @@ hr{
           <h4>About</h4>
           <h2>自我介紹</h2>
             <label>
-              原本打算大學畢業就直接考公務員一輩子安穩過完人生。<br>
-              但在朋友的引導下開始接觸到程式這個與當時的我八竿子打不著的領域。<br>
+              一年前在朋友的引導下接觸到程式這個領域。<br>
               一開始是接觸swift，但後來在短短兩週的台大資訊班前端課程開始累積我對網頁前端的好奇心。
               接著我開始在網路上找資源，參加各種關於程式的聚會，
               如Hahow,Udemy,Codecademy等等的課程及swift girls,appworks school,六角學院等等所舉辦的分享會，
               接觸到越多，就越增添了我對這領域的興趣。
-              到了今年四月，我終於真正踏進程式這個領域了，找到人生第一個程式實習。
+              今年四月開始的實習更讓我確定要往全端工程師之路邁進。<br>
+
             </label>
         </div>
         <!-- <div class="scene">
@@ -1111,7 +1111,7 @@ hr{
             2.對原生Javascript有基礎概念，目前常用jQuery練習做網頁動畫效果。<br>
             3.能不倚賴framework進行客製化網頁設計，但也熟悉bootstrap亦可利用此framework做網頁開發。<br>
             4.了解vue.js基礎概念，並能串接第三方api資料。<br>
-            5.能使用FTP,Git進行版本控制
+            5.能使用FTP,Git進行版本控制。
           </li>
           </ul>
         </div>
@@ -1184,34 +1184,6 @@ hr{
           <h4>Experience / Works</h4>
           <h2>工作經歷</h2>
           <ul class="listExperience" style="opacity: 0.9">
-            <li class="year">2014
-              <ul>
-                <li>Godiva歌帝梵</li>
-                <li>情人節檔次</li>
-                <li>負責銷售情人節禮盒及店內商品</li>
-              </ul>
-            </li>
-            <li class="year">2014
-              <ul>
-                <li>Le Panier de Paris</li>
-                <li>法式甜點店工讀生</li>
-                <li>負責收銀以及製作甜點、包裝甜點</li>
-              </ul>
-            </li>  
-            <li class="year">2015
-              <ul>
-                <li>Godiva歌帝梵</li>
-                <li>開幕期間工讀生</li>
-                <li>林口outlet店開幕時去支援工讀生，負責製作凍飲及收銀，凍飲曾一天破200杯紀錄</li>
-              </ul>
-            </li>  
-            <li class="year">2016
-              <ul>
-                <li>佳欣牙醫</li>
-                <li>牙醫助理</li>
-                <li>負責輸入病歷及協助醫生看診事宜</li>
-              </ul>
-            </li> 
             <li class="year">2018
               <ul>
                 <li>天王星多媒體(Panasonic網路廣告公司)</li>
@@ -1221,7 +1193,35 @@ hr{
                 <li>3.FTP、Git版控</li>
                 <li>4.SEO搜尋引擎優化</li>
               </ul>
-            </li> 
+            </li>
+            <li class="year">2016
+              <ul>
+                <li>佳欣牙醫</li>
+                <li>牙醫助理</li>
+                <li>負責輸入病歷及協助醫生看診事宜</li>
+              </ul>
+            </li>
+            <li class="year">2015
+              <ul>
+                <li>Godiva歌帝梵</li>
+                <li>開幕期間工讀生</li>
+                <li>林口outlet店開幕時去支援工讀生，負責製作凍飲及收銀，凍飲曾一天破200杯紀錄</li>
+              </ul>
+            </li>
+            <li class="year">2014
+              <ul>
+                <li>Le Panier de Paris</li>
+                <li>法式甜點店工讀生</li>
+                <li>負責收銀以及製作甜點、包裝甜點</li>
+              </ul>
+            </li>
+            <li class="year">2014
+              <ul>
+                <li>Godiva歌帝梵</li>
+                <li>情人節檔次</li>
+                <li>負責銷售情人節禮盒及店內商品</li>
+              </ul>
+            </li>
           </ul>
         </div>  
         <div class="block">
