--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <title>My Resume</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cinzel">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
@@ -37,6 +37,7 @@ p{
 h1{
   opacity: 0.8;
   font-size: 30px;
+  z-index: 999;
 }
 
 h2{
@@ -881,7 +882,8 @@ hr{
   border-radius: .25rem;
   color: #222;
   top:15px;
-  right:280px;
+  /* right:280px; */
+  margin-left: 210px;
   width: 65px;
   position: absolute; 
   z-index: 999; 
@@ -896,7 +898,8 @@ hr{
   border: solid 3px #fc7676;
   color: #222; 
   top: 15px;
-  right:205px;
+  /* right:205px; */
+  margin-left: 290px;
   border-radius: .25rem;
   width: 65px;
   position: absolute;
@@ -905,6 +908,47 @@ hr{
   text-decoration: none!important; 
   transition: 0.2s;
 }
+@media screen and (max-width: 768px){
+    .resume{
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+    }
+    .left{
+      border-right: none;
+      padding-right: 0px;
+      padding: 0;
+    }
+    .right{
+      width: 100%;
+      padding-left: 15px;
+      padding-top: 0px;;
+      overflow: visible;
+    }
+    .monster{
+      visibility: hidden;
+    }
+    .blue{
+      visibility: visible;
+      float: right;
+    }
+    .chinese{
+      margin-left: 170px;
+    }
+    .japan{
+      margin-left: 250px;
+    }
+    .profile{
+      visibility: hidden;
+    }
+    .decoration,.decoration3{
+      opacity: 0.5;
+    }
+    .decoration{
+      right: -50px;
+      top: 70px;
+    }
+  }
 .japan:hover{
     background-color: #fdbfbf;
 }
