--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -20,7 +20,7 @@
         }
 
         body {
-            padding: 50px;
+            /* padding: 50px; */
             display: flex;
             justify-content: center;
             background-color: #2c2b2c;
@@ -105,7 +105,7 @@
             padding: 50px;
             position: relative;
             overflow: hidden;
-            margin: 10px auto;
+            margin: 60px auto;
         }
 
         .left {
@@ -454,6 +454,47 @@
             display: block;
             margin: 15px auto;
             }
+            @media screen and (max-width: 768px){
+    .resume{
+      display: flex;
+      flex-direction: column;
+      padding: 15px;
+    }
+    .left{
+      border-right: none;
+      padding-right: 0px;
+      padding: 0;
+    }
+    .right{
+      width: 100%;
+      padding-left: 15px;
+      padding-top: 0px;;
+      overflow: visible;
+    }
+    .monster{
+      visibility: hidden;
+    }
+    .blue{
+      visibility: visible;
+      float: right;
+    }
+    .chinese{
+      margin-left: 170px;
+    }
+    .japan{
+      margin-left: 250px;
+    }
+    .profile{
+      visibility: hidden;
+    }
+    .decoration,.decoration3{
+      opacity: 0.5;
+    }
+    .decoration{
+      right: -50px;
+      top: 70px;
+    }
+  }
 
     </style>
 </head>
