--- a/index.html
+++ b/index.html
@@ -882,8 +882,7 @@ hr{
   border-radius: .25rem;
   color: #222;
   top:15px;
-  /* right:280px; */
-  margin-left: 210px;
+  right:280px;
   width: 65px;
   position: absolute; 
   z-index: 999; 
@@ -898,8 +897,7 @@ hr{
   border: solid 3px #fc7676;
   color: #222; 
   top: 15px;
-  /* right:205px; */
-  margin-left: 290px;
+  right:205px;
   border-radius: .25rem;
   width: 65px;
   position: absolute;
