--- a/japaneseversion.html
+++ b/japaneseversion.html
@@ -619,11 +619,21 @@
                 <h4>Experience / Works</h4>
                 <h2>職歷</h2>
                 <ul class="listExperience" style="opacity: 0.9">
-                    <li class="year">平成26
+                    <li class="year">平成30
                         <ul>
-                            <li>Godiva</li>
-                            <li>チョコレート専売店の店員</li>
-                            <li>バレンタインギフトと店內商品を売る。</li>
+                            <li>Panasonic台湾の広告企画会社</li>
+                            <li>WEB開発エンジニア 実習生</li>
+                            <li>上司に輔佐で、プロジェクトを守る
+                                <br>と管理する。</li>
+                        </ul>
+                    </li>
+                    <li class="year">平成28
+                        <ul>
+                            <li>佳欣歯病院</li>
+                            <li>歯医者アシスタント</li>
+                            <li>正式には診療録、病歴ともいい、医師
+                                <br>または歯科医師が医療を行ったときに
+                                <br>、その診断治療の内容を記載した文書。</li>
                         </ul>
                     </li>
                     <li class="year">平成26
@@ -633,20 +643,13 @@
                             <li>スウィーツを作るとラッピング。</li>
                         </ul>
                     </li>
-                    <li class="year">平成28
+                    <li class="year">平成26
                         <ul>
-                            <li>佳欣歯病院</li>
-                            <li>歯医者アシスタント</li>
-                            <li>正式には診療録、病歴ともいい、医師<br>または歯科医師が医療を行ったときに<br>、その診断治療の内容を記載した文書。</li>
+                            <li>Godiva</li>
+                            <li>チョコレート専売店の店員</li>
+                            <li>バレンタインギフトと店內商品を売る。</li>
                         </ul>
-                    </li>
-                    <li class="year">平成30
-                        <ul>
-                            <li>Panasonic台湾の広告企画会社</li>
-                            <li>WEB開発エンジニア 実習生</li>
-                            <li>上司に輔佐で、プロジェクトを守る<br>と管理する。</li>
-                        </ul>
-                    </li>
+                    </li> 
                 </ul>
                 <h4>Future Plan</h4>
                 <h2>未来の計画</h2>
