--- a/index.html
+++ b/index.html
@@ -1228,12 +1228,19 @@ hr{
           <ul class="listExperience" style="opacity: 0.9">
             <li class="year">2018
               <ul>
+                <li>車麻吉(前停車大聲公)</li>
+                <li>前端實習</li>
+                <li>開發官網且製作RWD版本網站</li>
+              </ul>
+            </li>
+            <li class="year">2018
+              <ul>
                 <li>天王星多媒體(Panasonic網路廣告公司)</li>
                 <li>前端學生實習</li>
-                <li>1.按照設計部門給的設計圖切版製作RWD版本網站</li>
-                <li>2.維護及優化網站及程式碼</li>
-                <li>3.FTP、Git版控</li>
-                <li>4.SEO搜尋引擎優化</li>
+                <li>按照設計部門給的設計圖切版製作RWD版本網站</li>
+                <li>維護及優化網站及程式碼</li>
+                <li>FTP、Git版控</li>
+                <li>SEO搜尋引擎優化</li>
               </ul>
             </li>
             <li class="year">2016
